--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -1,7 +1,17 @@
 {
   "language": "defecto",
   "texts": {
+    "All": "Todos",
+    "New": "Nuevo",
+    "Processing": "Procesando",
+    "Completed": "Terminado",
+    "Canceled": "Cancelado",
+    "Failed": "Ha fallado",
     "Search order": "Orden de búsqueda",
+    "From": "Desde",
+    "Status": "Estado",
+    "Total": "Total",
+    "Time": "Tiempo",
     "Description": "Descripción",
     "Title": "Título",
     "Sushi set..": "juego de sushi..",
@@ -12,6 +22,7 @@
     "Discounted": "Con descuento",
     "+ add variation": "+ añadir variación",
     "Inventory": "Inventario",
+    "Product stock unit identification number": "Número de identificación de la unidad de stock del producto",
     "General": "General",
     "Published": "Publicado",
     "Draft": "Sequía",
@@ -40,7 +51,7 @@
     "Left with space": "Dejado con espacio",
     "Right with space": "Justo con el espacio",
     "Your tax informatio": "Tu información fiscal",
-    "Invoice info (this information will be not revealed public": "Información de la factura (esta información no se revelará públicamente)",
+    "Invoice info (this information will be not revealed public)": "Información de la factura (esta información no se revelará públicamente)",
     "Tax ID": "Identificación del impuesto",
     "Email": "Correo electrónico",
     "Company": "Empresa",
@@ -56,24 +67,34 @@
     "Country": "País",
     "Payout data": "Datos de pago",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "Esta información se utiliza para procesar sus ganancias como parte de los programas Kenzap Affiliate o Kenzap Designing.",
-    "Bank account holder\\s name": "Nombre del propietario de la cuenta bancaria",
+    "Bank account holder\\": "Titular de la cuenta bancaria\\",
     "IBAN/Account Nr.": "IBAN/número de cuenta",
     "SWIFT Code": "Código SWIFT",
     "Bank name": "Nombre del banco",
     "Bank branch city": "Ciudad sucursal bancaria",
     "Bank branch country": "País de la sucursal bancaria",
+    "Showing %1$ to %2$ of %3$ entries": "Mostrando %1$ a %2$ de %3$ entradas",
+    "no records to display": "No hay registros que mostrar",
+    "Unpublished": "Inédito",
+    "Drafts": "Borradores",
+    "Jan": "Ene",
+    "Feb": "Feb",
+    "Mar": "Mar",
+    "Apr": "Abr",
+    "May": "Puede",
+    "Jun": "Jun",
+    "Jul": "Jul",
+    "Aug": "Ago",
+    "Sep": "Sep",
+    "Oct": "Oct",
+    "Nov": "Nov",
+    "Dec": "Dic",
     "Dashboard": "Panel",
     "E-commerce": "comercio electrónico",
-    "Copyright © +new Date(": "Copyright © +nueva fecha(",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Copyright © %1$ %2$ Kenzap%3$. Reservados todos los derechos.",
     "Kenzap Cloud Services - Dashboard": "Servicios en la nube de Kenzap - Panel de control",
-    "Orders": "Pedidos",
-    "New": "Nuevo",
-    "Processing": "Procesando",
-    "Completed": "Terminado",
-    "Canceled": "Cancelado",
-    "Failed": "Ha fallado",
     "No orders to display.": "No hay pedidos para mostrar.",
-    "All": "Todos",
+    "Orders": "Pedidos",
     "Update": "Actualizar",
     "Close": "Cerrar",
     "Completely remove this order?": "¿Eliminar completamente este pedido?",
@@ -93,27 +114,26 @@
     "Make this variation mandatory for users.": "Haga que esta variación sea obligatoria para los usuarios.",
     "Minimum required": "Mínimo requerido",
     "Please provide longer title": "Proporcione un título más largo",
-    "Add Variation": "Añadir variación",
+    "Add Variation": "Agregar variación",
     "Brown rice": "arroz integral",
     "You can change default currency under Dashboard &gt; Settings.": "Puede cambiar la moneda predeterminada en Panel de control &gt; Ajustes.",
     "Please provide image in JPEG format": "Proporcione la imagen en formato JPEG",
     "Please provide image less than 5 MB in size!": "Proporcione una imagen de menos de 5 MB de tamaño.",
+    "+ add option": "+ añadir opción",
+    ", differentiate price and product options.": ", diferenciar precio y opciones de producto.",
     "Remove": "Remover",
-    "Product list": "Lista de productos",
-    "Search products": "Buscar Productos",
-    "Status": "Estado",
     "Last change": "Ultimo cambio",
     "No products to display.": "No hay productos para mostrar.",
     "Product placeholder": "Producto marcador de posición",
     "Edit product": "Editar producto",
     "Remove this product": "Quitar este producto",
+    "Product list": "Lista de productos",
+    "Search products": "Buscar Productos",
     "Completely remove this product?": "¿Eliminar completamente este producto?",
     "Add Product": "Agregar producto",
     "Short description": "Breve descripción",
     "Settings": "Ajustes",
     "Choose currency": "Elegir Moneda",
-    "c.name": "c.nombre",
-    "c.code": "c.código",
     "Successfully updated": "Actualizado exitosamente"
   }
 }
