--- a/public/locales/lv.json
+++ b/public/locales/lv.json
@@ -1,17 +1,28 @@
 {
   "language": "noklusējuma",
   "texts": {
+    "All": "Visi",
+    "New": "Jauns",
+    "Processing": "Apstrāde",
+    "Completed": "Pabeigts",
+    "Canceled": "Atcelts",
+    "Failed": "Neizdevās",
     "Search order": "Meklēšanas secība",
+    "From": "No",
+    "Status": "Statuss",
+    "Total": "Kopā",
+    "Time": "Laiks",
     "Description": "Apraksts",
     "Title": "Nosaukums",
     "Sushi set..": "Suši komplekts..",
     "Short Description": "Īss apraksts",
     "Images": "Attēli",
     "Price": "Cena",
-    "Price normal": "Cena normāla",
+    "Price normal": "Parasta cena",
     "Discounted": "Atlaide",
     "+ add variation": "+ pievienot variāciju",
     "Inventory": "Inventārs",
+    "Product stock unit identification number": "Produkta krājuma vienības identifikācijas numurs",
     "General": "Ģenerālis",
     "Published": "Publicēts",
     "Draft": "Melnraksts",
@@ -40,12 +51,12 @@
     "Left with space": "Atlicis ar vietu",
     "Right with space": "Tieši ar telpu",
     "Your tax informatio": "Jūsu nodokļu informācija",
-    "Invoice info (this information will be not revealed public": "Informācija par rēķinu (šī informācija netiks atklāta",
+    "Invoice info (this information will be not revealed public)": "Informācija par rēķinu (šī informācija netiks atklāta)",
     "Tax ID": "Nodokļu ID",
     "Email": "E-pasts",
     "Company": "Uzņēmums",
     "Type": "Tips",
-    "Individual": "Individuāls",
+    "Individual": "Pašnodarbināts",
     "Business": "Bizness",
     "Address": "Adrese",
     "Address 1": "Adrese 1",
@@ -56,24 +67,34 @@
     "Country": "Valsts",
     "Payout data": "Izmaksu dati",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "Šī informācija tiek izmantota, lai apstrādātu jūsu ieņēmumus Kenzap Affiliate vai Kenzap Designing programmu ietvaros.",
-    "Bank account holder\\s name": "Bankas konta turētāja vārds",
+    "Bank account holder\\": "bankas konta īpašnieks\\",
     "IBAN/Account Nr.": "IBAN/Konta Nr.",
     "SWIFT Code": "SWIFT kods",
     "Bank name": "bankas nosaukums",
     "Bank branch city": "Bankas filiāles pilsēta",
     "Bank branch country": "Bankas filiāles valsts",
-    "Dashboard": "Mērinstrumentu panelis",
-    "E-commerce": "E-komercija",
-    "Copyright © +new Date(": "Autortiesības © +jauns datums(",
+    "Showing %1$ to %2$ of %3$ entries": "Tiek rādīts %1$ līdz %2$ no %3$ ierakstiem",
+    "no records to display": "pagaidam nav ierakstu",
+    "Unpublished": "Nepublicēts",
+    "Drafts": "Melnraksti",
+    "Jan": "Jan",
+    "Feb": "Feb",
+    "Mar": "Mar",
+    "Apr": "Apr",
+    "May": "Mai",
+    "Jun": "Jūn",
+    "Jul": "Jūl",
+    "Aug": "Aug",
+    "Sep": "Sept",
+    "Oct": "Okt",
+    "Nov": "Nov",
+    "Dec": "Dec",
+    "Dashboard": "Dashboards",
+    "E-commerce": "Ē-komercija",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Autortiesības © %1$ %2$ Kenzap%3$. Visas tiesības aizsargātas.",
     "Kenzap Cloud Services - Dashboard": "Kenzap mākoņpakalpojumi — informācijas panelis",
-    "Orders": "Pasūtījumi",
-    "New": "Jauns",
-    "Processing": "Apstrāde",
-    "Completed": "Pabeigts",
-    "Canceled": "Atcelts",
-    "Failed": "Neizdevās",
     "No orders to display.": "Nav pasūtījumu, ko parādīt.",
-    "All": "Visi",
+    "Orders": "Pasūtījumi",
     "Update": "Atjaunināt",
     "Close": "Aizvērt",
     "Completely remove this order?": "Vai pilnībā noņemt šo pasūtījumu?",
@@ -98,22 +119,21 @@
     "You can change default currency under Dashboard &gt; Settings.": "Varat mainīt noklusējuma valūtu sadaļā Informācijas panelis &gt; Iestatījumi.",
     "Please provide image in JPEG format": "Lūdzu, norādiet attēlu JPEG formātā",
     "Please provide image less than 5 MB in size!": "Lūdzu, norādiet attēlu, kura izmērs ir mazāks par 5 MB!",
+    "+ add option": "+ pievienošanas opcija",
+    ", differentiate price and product options.": ", diferencēt cenas un preču iespējas.",
     "Remove": "Noņemt",
-    "Product list": "Produktu saraksts",
-    "Search products": "Meklēt produktus",
-    "Status": "Statuss",
     "Last change": "Pēdējā maiņa",
     "No products to display.": "Nav produktu, ko parādīt.",
     "Product placeholder": "Produkta vietturis",
     "Edit product": "Rediģēt produktu",
     "Remove this product": "Noņemiet šo produktu",
+    "Product list": "Produktu saraksts",
+    "Search products": "Meklēt produktus",
     "Completely remove this product?": "Vai pilnībā noņemt šo produktu?",
     "Add Product": "Pievienot produktu",
     "Short description": "Īss apraksts",
     "Settings": "Iestatījumi",
     "Choose currency": "Izvēlieties valūtu",
-    "c.name": "c.nosaukums",
-    "c.code": "c.kods",
     "Successfully updated": "Veiksmīgi atjaunināts"
   }
 }
