--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -1,7 +1,17 @@
 {
   "language": "默认",
   "texts": {
+    "All": "全部",
+    "New": "新的",
+    "Processing": "加工",
+    "Completed": "完全的",
+    "Canceled": "取消",
+    "Failed": "失败的",
     "Search order": "搜索顺序",
+    "From": "从",
+    "Status": "地位",
+    "Total": "全部的",
+    "Time": "时间",
     "Description": "描述",
     "Title": "标题",
     "Sushi set..": "寿司套餐..",
@@ -12,6 +22,7 @@
     "Discounted": "打折",
     "+ add variation": "+ 添加变化",
     "Inventory": "存货",
+    "Product stock unit identification number": "产品库存单位识别号",
     "General": "一般的",
     "Published": "发表",
     "Draft": "草案",
@@ -40,7 +51,7 @@
     "Left with space": "留有空间",
     "Right with space": "右边有空格",
     "Your tax informatio": "您的税务信息",
-    "Invoice info (this information will be not revealed public": "发票信息（此信息不会公开",
+    "Invoice info (this information will be not revealed public)": "发票信息（此信息不会公开）",
     "Tax ID": "税号",
     "Email": "电子邮件",
     "Company": "公司",
@@ -56,24 +67,34 @@
     "Country": "国家",
     "Payout data": "支付数据",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "此信息用于处理您的收入，作为 Kenzap 附属公司或 Kenzap 设计计划的一部分。",
-    "Bank account holder\\s name": "银行账户持有人姓名",
+    "Bank account holder\\": "银行账户持有人\\",
     "IBAN/Account Nr.": "IBAN/帐号",
     "SWIFT Code": "SWIFT代码",
     "Bank name": "银行名称",
     "Bank branch city": "银行分行城市",
     "Bank branch country": "银行分行国家",
+    "Showing %1$ to %2$ of %3$ entries": "显示 %1$ 到 %2$ 个条目，共 %3$ 个条目",
+    "no records to display": "无记录可显示",
+    "Unpublished": "未发表",
+    "Drafts": "草稿",
+    "Jan": "简",
+    "Feb": "二月",
+    "Mar": "海",
+    "Apr": "四月",
+    "May": "可能",
+    "Jun": "Jun",
+    "Jul": "七月",
+    "Aug": "八月",
+    "Sep": "九月",
+    "Oct": "十月",
+    "Nov": "十一月",
+    "Dec": "十二月",
     "Dashboard": "仪表盘",
     "E-commerce": "电子商务",
-    "Copyright © +new Date(": "版权所有 © +新日期(",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "版权所有 © %1$ %2$ Kenzap%3$。版权所有。",
     "Kenzap Cloud Services - Dashboard": "Kenzap 云服务 - 仪表板",
-    "Orders": "订单",
-    "New": "新的",
-    "Processing": "加工",
-    "Completed": "完全的",
-    "Canceled": "取消",
-    "Failed": "失败的",
     "No orders to display.": "没有可显示的订单。",
-    "All": "全部",
+    "Orders": "订单",
     "Update": "更新",
     "Close": "关闭",
     "Completely remove this order?": "完全删除此订单？",
@@ -98,22 +119,21 @@
     "You can change default currency under Dashboard &gt; Settings.": "您可以在仪表板下更改默认货币 >设置。",
     "Please provide image in JPEG format": "请提供JPEG格式的图片",
     "Please provide image less than 5 MB in size!": "请提供小于 5 MB 的图片！",
+    "+ add option": "+ 添加选项",
+    ", differentiate price and product options.": "，区分价格和产品选项。",
     "Remove": "消除",
-    "Product list": "产品列表",
-    "Search products": "搜索产品",
-    "Status": "地位",
     "Last change": "最后一次变更",
     "No products to display.": "没有可展示的产品。",
     "Product placeholder": "产品占位符",
     "Edit product": "编辑产品",
     "Remove this product": "删除此产品",
+    "Product list": "产品列表",
+    "Search products": "搜索产品",
     "Completely remove this product?": "完全删除此产品？",
     "Add Product": "添加产品",
     "Short description": "简短的介绍",
     "Settings": "设置",
     "Choose currency": "选择货币",
-    "c.name": "c.name",
-    "c.code": "c.代码",
     "Successfully updated": "成功更新"
   }
 }
