--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -1,17 +1,28 @@
 {
   "language": "bawaan",
   "texts": {
+    "All": "Semua",
+    "New": "Baru",
+    "Processing": "Pengolahan",
+    "Completed": "Lengkap",
+    "Canceled": "Dibatalkan",
+    "Failed": "Gagal",
     "Search order": "Cari pesanan",
+    "From": "Dari",
+    "Status": "Status",
+    "Total": "Total",
+    "Time": "Waktu",
     "Description": "Keterangan",
     "Title": "Judul",
     "Sushi set..": "paket sushinya..",
     "Short Description": "Deskripsi Singkat",
     "Images": "Gambar-gambar",
     "Price": "Harga",
-    "Price normal": "harga normal",
+    "Price normal": "Harga normal",
     "Discounted": "diskon",
     "+ add variation": "+ tambahkan variasi",
     "Inventory": "Inventaris",
+    "Product stock unit identification number": "Nomor identifikasi unit stok produk",
     "General": "Umum",
     "Published": "Diterbitkan",
     "Draft": "Draf",
@@ -40,7 +51,7 @@
     "Left with space": "Ditinggalkan dengan ruang",
     "Right with space": "Benar dengan ruang",
     "Your tax informatio": "Informasi pajak Anda",
-    "Invoice info (this information will be not revealed public": "Info faktur (informasi ini tidak akan diungkapkan kepada publik",
+    "Invoice info (this information will be not revealed public)": "Info faktur (informasi ini tidak akan diungkapkan kepada publik)",
     "Tax ID": "Id pajak",
     "Email": "Surel",
     "Company": "Perusahaan",
@@ -56,24 +67,34 @@
     "Country": "Negara",
     "Payout data": "Data pembayaran",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "Informasi ini digunakan untuk memproses penghasilan Anda sebagai bagian dari program Afiliasi Kenzap atau Desain Kenzap.",
-    "Bank account holder\\s name": "Nama pemegang rekening bank",
+    "Bank account holder\\": "Pemegang rekening bank\\",
     "IBAN/Account Nr.": "IBAN/Nomor Rekening.",
     "SWIFT Code": "Tukar Kode",
     "Bank name": "nama Bank",
     "Bank branch city": "kota cabang bank",
     "Bank branch country": "negara cabang bank",
+    "Showing %1$ to %2$ of %3$ entries": "Menampilkan %1$ hingga %2$ dari %3$ entri",
+    "no records to display": "Tidak ada catatan untuk ditampilkan",
+    "Unpublished": "Tidak diterbitkan",
+    "Drafts": "draf",
+    "Jan": "Jan",
+    "Feb": "Februari",
+    "Mar": "Laut",
+    "Apr": "April",
+    "May": "Boleh",
+    "Jun": "Juni",
+    "Jul": "Juli",
+    "Aug": "Agustus",
+    "Sep": "Sep",
+    "Oct": "Oktober",
+    "Nov": "November",
+    "Dec": "Desember",
     "Dashboard": "Dasbor",
     "E-commerce": "Perdagangan elektronik",
-    "Copyright © +new Date(": "Hak Cipta © +Tanggal baru(",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Hak Cipta © %1$ %2$ Kenzap%3$. Seluruh hak cipta.",
     "Kenzap Cloud Services - Dashboard": "Layanan Cloud Kenzap - Dasbor",
-    "Orders": "Pesanan",
-    "New": "Baru",
-    "Processing": "Pengolahan",
-    "Completed": "Lengkap",
-    "Canceled": "Dibatalkan",
-    "Failed": "Gagal",
     "No orders to display.": "Tidak ada perintah untuk ditampilkan.",
-    "All": "Semua",
+    "Orders": "Pesanan",
     "Update": "Memperbarui",
     "Close": "Menutup",
     "Completely remove this order?": "Hapus pesanan ini sepenuhnya?",
@@ -98,22 +119,21 @@
     "You can change default currency under Dashboard &gt; Settings.": "Anda dapat mengubah mata uang default di Dasbor &gt; Pengaturan.",
     "Please provide image in JPEG format": "Harap berikan gambar dalam format JPEG",
     "Please provide image less than 5 MB in size!": "Harap berikan gambar berukuran kurang dari 5 MB!",
+    "+ add option": "+ tambahkan opsi",
+    ", differentiate price and product options.": ", membedakan harga dan pilihan produk.",
     "Remove": "Menghapus",
-    "Product list": "Daftar Produk",
-    "Search products": "Cari produk",
-    "Status": "Status",
     "Last change": "Perubahan terakhir",
     "No products to display.": "Tidak ada produk untuk ditampilkan.",
     "Product placeholder": "Tempat penampung produk",
     "Edit product": "Sunting produk",
     "Remove this product": "Hapus produk ini",
+    "Product list": "Daftar Produk",
+    "Search products": "Cari produk",
     "Completely remove this product?": "Hapus produk ini sepenuhnya?",
     "Add Product": "Tambahkan Produk",
     "Short description": "Deskripsi Singkat",
     "Settings": "Pengaturan",
     "Choose currency": "Pilih mata uang",
-    "c.name": "c.nama",
-    "c.code": "c.kode",
     "Successfully updated": "Berhasil diperbaharui"
   }
 }
