new rollup version

--- a/public/locales/lv.json
+++ b/public/locales/lv.json
@@ -92,7 +92,7 @@
     "Dashboard": "Dashboards",
     "E-commerce": "Ē-komercija",
     "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Autortiesības © %1$ %2$ Kenzap%3$. Visas tiesības aizsargātas.",
-    "Kenzap Cloud Services - Dashboard": "Kenzap mākoņpakalpojumi — informācijas panelis",
+    "Kenzap Cloud Services - Dashboard": "Kenzap mākoņpakalpojumi",
     "No orders to display.": "Nav pasūtījumu, ko parādīt.",
     "Orders": "Pasūtījumi",
     "Update": "Atjaunināt",
